# markai

./: .cursorrules  .gitignore  .gitmodules  .markairules  .markairules.ma  LICENSE  MARKAI_SPECIFICATION.txt  MarkAI_v1.0.md  README.ma  README.md  RFC_AI-0001.txt  RFC_AI-0002.txt  RFC_MARKAI-0001.txt  RFC_MARKAI-0002.txt  RFC_MARKAI-0003.txt  RFC_MARKAI-0004.txt  RFC_MARKAI-0005.txt  RFC_MARKAI_SPEC.txt  pyproject.toml
examples/: test.ma
markai-extension/: README.md  extension.js  markai-1.0.0.vsix  package.json
rfcs/: RFC_MARKAI-0001.txt  RFC_MARKAI-0002.txt  RFC_MARKAI-0003.txt  RFC_MARKAI-0005.txt  RFC_MARKAI-0006.txt  RFC_MARKAI-0007.txt  RFC_MARKAI_SPEC.txt
tools/: README.md
tools/ma/: __init__.py  core.py  main.py  plugins.py
tools/ma/markai_cli/: main.py
tools/ma/markai_core/: __main__.py  core.py
tools/ma/tests/: test_markai.py
vscode-extension/: LICENSE  markai-1.0.0.vsix
