[tool.poetry]
name = "markai"
version = "1.0.0"
description = "MarkAI Reference Implementation"
authors = ["Nathaniel Houk <nate@audiokit.ai>"]
readme = "README.md"
license = "MIT"

# Only include the 'ma' package from tools/ma.
packages = [
    { include = "ma", from = "tools" }
]

[tool.poetry.scripts]
# Single CLI entry point for the core tool.
ma = "ma.markai_core.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 